--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,19 +10,16 @@
 color: black;
 font-size: 1.3rem;
 text-decoration: none;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 
 }
 
-.navbar-list:hover{
-  text-decoration: underline;
-   
- }
+
 
 .button-responsive {
     background-color: white; 
     
 }
-
 
 
