--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -27,3 +27,10 @@ box-shadow: 6px 13px 61px -30px rgba(0,0,0,0.75);
    
     
 }
+
+
+@media (max-width: 767px) {
+    .card-productos{
+     
+    }
+    }
