--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,36 +1,38 @@
-.card-productos{
-width: 350px;
-height: 100%;
-box-shadow: 6px 13px 61px -30px rgba(0,0,0,0.75);
--webkit-box-shadow: 6px 13px 61px -30px rgba(0,0,0,0.75);
--moz-box-shadow: 6px 13px 61px -30px rgba(0,0,0,0.75);
+.card-productos {
+  width: 350px;
+  height: 100%;
+  box-shadow: 6px 13px 61px -30px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 6px 13px 61px -30px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 6px 13px 61px -30px rgba(0, 0, 0, 0.75);
 }
 
-.card-img{
-    width: 80%;
+.card-img {
+  width: 80%;
 }
 
-.boton-productos{
-    background-color: black;
-    color: white;
-    height: 40px;
-    border-radius: 0.5rem;
-    padding-left: 10px;
-    padding-right: 10px;
-   
-
+.boton-productos {
+  padding: 5px 5px 5px;
+  margin-top: 2rem;
+  border: 1px solid black;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
-.boton-productos:hover{
-    background-color: rgb(255, 255, 255);
-    color: black;
-   
-    
+.boton-productos:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
 }
-
-
-@media (max-width: 767px) {
-    .card-productos{
-     
-    }
-    }
