--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,30 +1,46 @@
-.h1-contacto{
-    display: flex;
-    justify-content: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 2rem;
-    
-
-} 
-
-.contacto-acordion{
-    margin-right: 1rem;
-    margin-left: 1rem;
-    margin-top: 5rem;
-    background-color: black;
+.h1-contacto {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: 2rem;
+  padding-bottom: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
 }
 
-.contacto-acordion-texto{
-    font-size: 1.5rem;
+.div-contacta {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 6rem;
+  background: rgb(230, 230, 230);
+  background: linear-gradient(
+    90deg,
+    rgba(230, 230, 230, 1) 0%,
+    rgba(250, 250, 249, 1) 49%,
+    rgba(199, 199, 199, 1) 68%,
+    rgba(48, 42, 47, 1) 100%
+  );
 }
 
-.contacto{
-    height: 100vh;
+.contacto-acordion {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  margin-top: 10rem;
+  background-color: black;
 }
 
+.contacto-acordion-texto {
+  font-size: 1.5rem;
+}
+
+.contacto {
+  height: 100vh;
+}
 
 @media (max-width: 767px) {
-    .contacto{
-        height: 130vh;
-    }
- }
+  .contacto {
+    height: 130vh;
+  }
+}
